Bug 622517 - Only use remoted audio streams on Android.  r=dougt a=dbaron